--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -1,9 +1,9 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Potter" %>">
+<meta name="description" content="<%= content_for?(:description) ? yield(:description) : "SpellLearn" %>">
 <meta name="keywords" content="">
 
-<title><%= content_for?(:title) ? yield(:title) : (content_for?(:heading) ? yield(:heading) : "Potter") %></title>
+<title><%="SpellLearn"%></title>
 <%= csrf_meta_tags %>
 
 <%= stylesheet_link_tag    'application', media: 'all' %>
