implementing custom methods

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,8 @@
-<div class="home-banner">
-  <h1>Welcome, wizards.</h1>
+<div class="data-analysis">
+  <h1>Welcome, wizards. <%= @name %></h1>
+  <h1><%= @other %></h1>
+  <h1><%= @otherSpell %></h1>
+  <h1><%= @bookData %></h1>
   <p>
     This project aims to test your ability to draw meaning from context clues through a
     fun game utilizing harry potter data.
