--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -1,12 +1,15 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<meta name="description" content="<%= content_for?(:description) ? yield(:description) : "SpellLearn" %>">
+<meta name="description" content="<%= content_for?(:description) ? yield(:description) : "PotterGame" %>">
 <meta name="keywords" content="">
 
-<title><%="SpellLearn"%></title>
+<title><%="Code2040 Harry Potter Code Sample - Alexis Herrera"%></title>
 <%= csrf_meta_tags %>
 
-<%= stylesheet_link_tag    'application', media: 'all' %>
-<%= javascript_include_tag 'application' %>
-
+<!---Bootstrap -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<!--Custom css & js-->
+<%= stylesheet_link_tag    'style', media: 'all' %>
+<%= javascript_include_tag 'js' %>
 <link rel="icon" type="image/png" href="<%= image_path 'favicon-32x32.png' %>" sizes="32x32">
