--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,6 +3,7 @@
   <h1><%= @other %></h1>
   <h1><%= @otherSpell %></h1>
   <h1><%= @bookData %></h1>
+  <h1><%=@test %></h1>
   <p>
     This project aims to test your ability to draw meaning from context clues through a
     fun game utilizing harry potter data.
