added backend function to find top n spells per book

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <div class="data-analysis">
   <h1>Welcome, wizards. <%= @name %></h1>
-  <h1><%= @bookToSpellsMap %></h1>
+  <h1><%= @top2SpellsMap%></h1>
   <!-- <h1><%= @other %></h1>
   <h1><%= @otherSpell %></h1>
   <h1><%= @bookData %></h1>
