--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <div class="data-analysis">
-  <h1>Welcome, wizards. <%= @name %></h1>
-  <h1><%= @sentiment %></h1>
+  <h1>~~testing</h1>
+  <h1><%= @nlpSpellScoreByPassage %></h1>
   <!-- <h1><%= @other %></h1>
   <h1><%= @otherSpell %></h1>
   <h1><%= @bookData %></h1>
