removed pre-existing frontend code and started general layout with bootstrap.

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,4 +1,21 @@
-.landing {
-  height:100vh;
+.data-side {
   background-color: blue;
+  height: 100vh;
+}
+.menu-side {
+  background-color: yellow;
+  height: 100vh;
+}
+@media screen and (min-width:480px) {
+  .container-margin {
+    margin-right: -15px;
+    margin-left: -15px;
+  }
+}
+
+@media screen and (max-width:479px) {
+  .container-margin {
+    margin-right: -12px;
+    margin-left: -12px;
+  }
 }
