--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,15 +1,12 @@
 <div class="data-analysis">
-  <h1>~~testing</h1>
-  <h1>hey</h1>
-  <!-- <h1><%= @other %></h1>
-  <h1><%= @otherSpell %></h1>
-  <h1><%= @bookData %></h1>
-  <h1><%=@test %></h1> -->
-  <p>
-    This project aims to test your ability to draw meaning from context clues through a
-    fun game utilizing harry potter data.
-  </p>
-  <p>
-    Are you ready to play?
-  </p>
+  <div class="container-fluid container-margin">
+    <div class="row">
+      <div class="col-9 col-sm-9 col-md-9 data-side">
+        <h1>Data Side</h1>
+      </div>
+      <div class="col-3 col-sm-3 col-md-3 menu-side">
+        <h1>Side menu</h1>
+      </div>
+    </div>
+  </div>
 </div>
