--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,10 +2,47 @@
   <div class="container-fluid container-margin">
     <div class="row">
       <div class="col-9 col-sm-9 col-md-9 data-side">
-        <h1>Data Side</h1>
+        <div class="d-title">
+          <h1>Potter-Visualization</h1>
+          <h3>Module 1</h3>
+        </div>
+        <div id="viz"></div>
+    <script type="text/javascript">
+
+    var sampleSVG = d3.select("#viz")
+        .append("svg")
+        .attr("width", 100)
+        .attr("height", 100);
+
+    sampleSVG.append("circle")
+        .style("stroke", "gray")
+        .style("fill", "white")
+        .attr("r", 40)
+        .attr("cx", 50)
+        .attr("cy", 50)
+        .on("mouseover", function(){d3.select(this).style("fill", "aliceblue");})
+        .on("mouseout", function(){d3.select(this).style("fill", "white");});
+
+    </script>
+
+
+
+
+
+
+
+
       </div>
       <div class="col-3 col-sm-3 col-md-3 menu-side">
-        <h1>Side menu</h1>
+        <br />
+        <h3>module 1</h3>
+        <h3>module 2</h3>
+        <h3>module 3</h3>
+        <h3>module 4</h3>
+        <h3>module 5</h3>
+        <h3>module 6</h3>
+        <h3>module 7</h3>
+        <h3>about</h3>
       </div>
     </div>
   </div>
