--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,28 +3,12 @@
     <div class="row">
       <div class="col-9 col-sm-9 col-md-9 data-side">
         <div class="d-title">
-          <h1>Potter-Visualization</h1>
-          <h3>Module 1</h3>
+          <h1 id ="title">Title</h1>
+          <h3>sub-title</h3>
         </div>
-        <div id="viz"></div>
-    <script type="text/javascript">
-
-    var sampleSVG = d3.select("#viz")
-        .append("svg")
-        .attr("width", 100)
-        .attr("height", 100);
-
-    sampleSVG.append("circle")
-        .style("stroke", "gray")
-        .style("fill", "white")
-        .attr("r", 40)
-        .attr("cx", 50)
-        .attr("cy", 50)
-        .on("mouseover", function(){d3.select(this).style("fill", "aliceblue");})
-        .on("mouseout", function(){d3.select(this).style("fill", "white");});
-
-    </script>
-
+        <div>
+          <%= @NLPTESTMENTIONSPELL =%>
+        </div>
 
 
 
@@ -34,7 +18,7 @@
 
       </div>
       <div class="col-3 col-sm-3 col-md-3 menu-side">
-        <br />
+        <h1>place </h1>
         <h3>module 1</h3>
         <h3>module 2</h3>
         <h3>module 3</h3>
