finished JSON object to JSON arr data transformation

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,7 +7,7 @@
           <h3>sub-title</h3>
         </div>
         <div>
-          <%= @NLPTESTMENTIONSPELL =%>
+          <%= @NLPTEST =%>
         </div>
 
 
