--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,7 +7,12 @@
           <h3>sub-title</h3>
         </div>
         <div>
-          <%= @NLPTEST =%>
+          <%= @otherSpell =%>
+          <%= @bookData  =%>
+          <%= @t1 =%>
+          <%= @t2 =%>
+          <%= @t3 =%>
+          <%= @t4 =%>
         </div>
 
 
