--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,38 +1,41 @@
 <div class="data-analysis">
   <div class="container-fluid container-margin">
     <div class="row">
-      <div class="col-9 col-sm-9 col-md-9 data-side">
-        <div class="d-title">
-          <h1 id ="title">Title</h1>
-          <h3>sub-title</h3>
-        </div>
-        <div>
-          <%= @otherSpell =%>
-          <%= @bookData  =%>
-          <%= @t1 =%>
-          <%= @t2 =%>
-          <%= @t3 =%>
-          <%= @t4 =%>
-        </div>
+      <div class="col-12 col-sm-12 col-md-12">
+      <div class="d-title">
 
-
-
-
-
-
-
-      </div>
-      <div class="col-3 col-sm-3 col-md-3 menu-side">
-        <h1>place </h1>
-        <h3>module 1</h3>
-        <h3>module 2</h3>
-        <h3>module 3</h3>
-        <h3>module 4</h3>
-        <h3>module 5</h3>
-        <h3>module 6</h3>
-        <h3>module 7</h3>
-        <h3>about</h3>
+        <h1>Visualizing Potter</h1>
+        <h4>Data visualization project for Code2040 fellows application</h4>
       </div>
     </div>
+    </div>
+
+    <div class="row">
+      <div class="col-12 col-sm-12 col-md-12">
+
+
+          <ul id ="navlist">
+            <li>
+              <a href"swag">mod1</a>
+            </li>
+            <li>
+              <a href"swag">mod1</a>
+            </li>
+            <li>
+              <a href"swag">mod1</a>
+            </li>
+          </ul>
+
+
+
+
+
+
+
+
+
+      </div>
+    </div>
+
   </div>
 </div>
