--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,1 +1,74 @@
-<p class="lead">This app was written by <strong><%= @your_name %></strong>
+<div class="container">
+  <div class="row">
+    <div class="col-12 col-sm-12 col-md-12">
+      <div class="title">
+
+        <h2><strong>Visualizing Potter</strong></h2>
+        <h5>Data visualization project for <Strong>Code2040 Fellows Program</Strong> application</h5>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-12">
+
+      <!--navigation of modules -->
+      <ul class="nav">
+        <li class="nav-item">
+          <a class="nav-link" href="/">mod 1</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/2">mod 2</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/3" id="m3">mod 3</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/4" id="m4">mod 4</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/5" id="m5">mod 5</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/6" id="m6">mod 6</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="/about" id="m8">about me</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+  <div class="row" id="data-content">
+    <div class="col-12 col-sm-12 col-md-12 col-lg-8">
+
+      <%= image_tag "personal_pic.JPG", :class => "img-fluid"%>
+
+    </div>
+
+    <div class="col-12 col-sm-12 col-md-12 col-lg-4">
+      <h4>Alexis Herrera</h4>
+      <p>
+        Hey there! I am glad you're checking out this code sample, I put a lot of effort into it!
+      </p>
+      <p>
+        I am currently a junior at the <a target="_blank" href="http://www.upenn.edu/">University of Pennsylvania</a>, where I am pursuing a double
+        major in <a target="_blank" href="http://www.cis.upenn.edu/index.php">computer science</a> and
+        <a target="_blank" href="https://sociology.sas.upenn.edu/">sociology</a>. Broadly, I am interested in creating human-centered technologies
+        that bridge the digital and the human in novel and useful ways.
+      </p>
+
+      <p>
+        When I'm not <a target="_blank" href="https://github.com/alexisherrera">coding</a>, I love to listen to music, cook, write, and ride my bike!
+        Nonetheless, I am always looking to work on cool projects or take on interesting opportunities, so please feel free to
+        <a href="mailto:halexis@sas.upenn.edu" target="_top">contact</a>
+        me if you have something in mind!
+      </p>
+      <p>
+        <a target="_blank" href="http://halexis.me/">Personal Site</a>
+      </p>
+
+
+    </div>
+  </div>
+
+</div>
