completed another module

--- a/app/views/home/mod_3.html.erb
+++ b/app/views/home/mod_3.html.erb
@@ -24,13 +24,13 @@
           <a class="nav-link active" href="#" id="m3">mod 3</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#" id="m4">mod 4</a>
+          <a class="nav-link" href="/4" id="m4">mod 4</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#" id="m5">mod 5</a>
+          <a class="nav-link" href="/5" id="m5">mod 5</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#" id="m6">mod 6</a>
+          <a class="nav-link" href="/6" id="m6">mod 6</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/about" id="m8">about me</a>
