responsiveness for nav bar and worked on restructuring text description

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -15,10 +15,10 @@
       <!--navigation of modules -->
       <ul class="nav">
         <li class="nav-item">
-          <a class="nav-link" href="/">mod 1</a>
+          <a class="nav-link" href="/" id="m1">mod 1</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/2">mod 2</a>
+          <a class="nav-link" href="/2" id="m2">mod 2</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/3" id="m3">mod 3</a>
@@ -33,7 +33,7 @@
           <a class="nav-link" href="/6" id="m6">mod 6</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="/about" id="m8">about me</a>
+          <a class="nav-link active" href="#" id="about">about me</a>
         </li>
       </ul>
     </div>
@@ -48,7 +48,7 @@
     <div class="col-12 col-sm-12 col-md-12 col-lg-4">
       <h4>Alexis Herrera</h4>
       <p>
-        Hey there! I am glad you're checking out this code sample, I put a lot of effort into it!
+        Hey there! I am glad you're checking out this code sample &mdash; I put a lot of effort into it!
       </p>
       <p>
         I am currently a junior at the <a target="_blank" href="http://www.upenn.edu/">University of Pennsylvania</a>, where I am pursuing a double
