--- a/app/views/home/mod_2.html.erb
+++ b/app/views/home/mod_2.html.erb
@@ -15,10 +15,10 @@
       <!--navigation of modules -->
       <ul class="nav">
         <li class="nav-item">
-          <a class="nav-link" href="/">mod 1</a>
+          <a class="nav-link" href="/" id="m1">mod 1</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="#">mod 2</a>
+          <a class="nav-link active" href="#" id="m2">mod 2</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/3" id="m3">mod 3</a>
@@ -33,7 +33,7 @@
           <a class="nav-link" href="/6" id="m6">mod 6</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/about" id="m8">about me</a>
+          <a class="nav-link" href="/about" id="about">about me</a>
         </li>
       </ul>
     </div>
@@ -45,9 +45,9 @@
     <div class="col-12 col-sm-12 col-md-12 col-lg-4">
       <h4>Spell Frequency Per Book</h4>
       <p>
-        In this module, I illustrate the frequency of spells that appeared in the Mentions dataset. As we can see,
+        In this module, I illustrate the frequency of spells that appeared in the <strong>Mentions</strong> dataset. As we can see,
         not very many lines/phrases from the two earliest books were available in the dataset. For instance, starting with <em>Harry
-        Potter and the Prisoner of Azkaban</em> (PoA), spell counts grow dramatically (there is an over 47 spell difference count between PoA and
+        Potter and the Prisoner of Azkaban</em> (PoA), spell counts grow dramatically (there is a spell difference count of over 47 between PoA and
         SS).
       </p>
 
